<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/iv_logo"
        android:src="@mipmap/launch_logo"
        android:layout_width="75dp"
        android:layout_height="65dp"
        android:layout_marginTop="97dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginTop="1.5dp"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintLeft_toLeftOf="@id/iv_logo"
        app:layout_constraintRight_toRightOf="@id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"/>

    <ImageView
        android:id="@+id/iv_channel"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="40dp"
        android:src="@mipmap/ic_channel"
        app:layout_constraintBottom_toBottomOf="@id/tv_spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_spinner" />

    <TextView
        android:id="@+id/tv_spinner"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="249.5dp"
        android:layout_marginEnd="40dp"
        android:gravity="center_vertical"
        android:text="@string/keeper"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@id/iv_channel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_url"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:textColor="@color/colorWhite"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_spinner"
        app:layout_constraintRight_toRightOf="@id/tv_spinner"
        app:layout_constraintTop_toBottomOf="@id/tv_spinner" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@color/color9BC1C6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_url" />

    <ImageView
        android:id="@+id/iv_spinner"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@mipmap/pulldown"
        app:layout_constraintBottom_toBottomOf="@id/tv_spinner"
        app:layout_constraintRight_toRightOf="@id/tv_spinner"
        app:layout_constraintTop_toTopOf="@id/tv_spinner" />

    <Spinner
        android:id="@+id/spinner_channel"
        style="@style/spinner_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        app:layout_constraintLeft_toLeftOf="@id/tv_spinner"
        app:layout_constraintRight_toRightOf="@id/tv_spinner"
        app:layout_constraintTop_toBottomOf="@id/tv_spinner" />


    <ImageView
        android:id="@+id/iv_account"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="40dp"
        android:src="@mipmap/ic_account"
        app:layout_constraintBottom_toBottomOf="@id/et_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_account" />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/et_hint_username"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorABC4C0"
        android:textSize="13sp"
        app:layout_constraintLeft_toRightOf="@id/iv_account"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_url" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="1dp"
        android:background="@color/color9BC1C6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_account" />


    <ImageView
        android:id="@+id/iv_password"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="40dp"
        android:src="@mipmap/ic_password"
        app:layout_constraintBottom_toBottomOf="@id/et_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_password" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/et_hint_password"
        android:inputType="textPassword"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorABC4C0"
        android:textSize="13sp"
        app:layout_constraintLeft_toRightOf="@id/iv_password"
        app:layout_constraintRight_toLeftOf="@id/ll_password_status"
        app:layout_constraintTop_toBottomOf="@id/et_account" />

    <LinearLayout
        android:id="@+id/ll_password_status"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="25dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/et_password"
        app:layout_constraintTop_toTopOf="@id/et_password">

        <ImageView
            android:id="@+id/iv_password_status"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@mipmap/ic_eye_off" />

    </LinearLayout>



    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="1dp"
        android:background="@color/color9BC1C6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <TextView
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/create_account"
        android:textSize="12sp"
        android:textColor="@color/colorABC4C0"
        android:layout_marginStart="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password" />


    <TextView
        android:id="@+id/btn_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/forgot_password"
        android:textSize="12sp"
        android:textColor="@color/colorABC4C0"
        android:layout_marginEnd="40dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password" />


    <TextView
        android:id="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/shape_login_btn_off"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/btn_login"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />


</androidx.constraintlayout.widget.ConstraintLayout>